--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="/img/slide1.png" class="d-block w-100" alt="Slide 1">
+                        <img src="img/slide1.png" class="d-block w-100" alt="Slide 1">
                     </div>
                     <div class="carousel-item">
-                        <img src="/img/slide2.png" class="d-block w-100" alt="Slide 2">
+                        <img src="img/slide2.png" class="d-block w-100" alt="Slide 2">
                     </div>
                     <div class="carousel-item">
-                        <img src="/img/slide3.png" class="d-block w-100" alt="Slide 3">
+                        <img src="img/slide3.png" class="d-block w-100" alt="Slide 3">
                     </div>
                     <div class="carousel-item">
-                        <img src="/img/slide4.png" class="d-block w-100" alt="Slide 4">
+                        <img src="img/slide4.png" class="d-block w-100" alt="Slide 4">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -73,7 +73,7 @@
             <!-- Buku -->
             <div class="d-flex justify-content-around mx-4">
                 <div class="card m-2 align-items-center" style="width: 10rem;">
-                    <img src="/img/buku1.jpg" class="card-img-top" alt="...">
+                    <img src="img/buku1.jpg" class="card-img-top" alt="...">
                     <div class="card-body" style="background-color: rgb(212, 211, 215);">
                         <p class="card-text text-center fw-bold" style="font-size: 12px;">80-20 Principles - Ricard Koch
                         </p>
@@ -81,7 +81,7 @@
                     </div>
                 </div>
                 <div class="card m-2 align-items-center" style="width: 10rem;">
-                    <img src="/img/buku2.jpg" class="card-img-top" alt="...">
+                    <img src="img/buku2.jpg" class="card-img-top" alt="...">
                     <div class="card-body" style="background-color: rgb(212, 211, 215);">
                         <p class="pt-1 card-text text-center fw-bold" style="font-size: 12px;">Grit - Angela Duckworth
                         </p>
@@ -89,7 +89,7 @@
                     </div>
                 </div>
                 <div class="card m-2 align-items-center" style="width: 10rem;">
-                    <img src="/img/buku3.jpg" class="card-img-top" alt="...">
+                    <img src="img/buku3.jpg" class="card-img-top" alt="...">
                     <div class="card-body" style="background-color: rgb(212, 211, 215);">
                         <p class="card-text text-center fw-bold" style="font-size: 12px;">How to win friends and
                             influenc...</p>
@@ -108,23 +108,23 @@
             <!-- Online Store -->
             <div class="d-flex justify-content-center">
                 <a href="https://play.google.com/store/apps/details?id=com.rifqyyusuf.brainologyapp">
-                    <img src="/img/play store.png" class="mt-1" style="height: 77.39px; width: 200px;" alt="">
+                    <img src="img/play store.png" class="mt-1" style="height: 77.39px; width: 200px;" alt="">
                 </a>
                 <a href="https://apps.apple.com/us/app/brainology/id1670792282">
-                    <img src="/img/app store.png" class="mt-3" style="height: 50.52px; width: 150px;" alt="">
+                    <img src="img/app store.png" class="mt-3" style="height: 50.52px; width: 150px;" alt="">
                 </a>
             </div>
             <!-- Online Store -->
             <!-- Media -->
             <div class="d-flex justify-content-center mt-5">
                 <a class="ms-4 me-3" href="https://www.instagram.com/brainology.id/">
-                    <img class="rounded-circle" style="width:54px; height:54px;" src="/img/instagram.jpg" alt="">
+                    <img class="rounded-circle" style="width:54px; height:54px;" src="img/instagram.jpg" alt="">
                 </a>
                 <a class="ms-4 me-3" href="https://www.instagram.com/brainology.id/">
-                    <img class="rounded-circle" style="width:54px; height:54px;" src="/img/tiktok.jpg" alt="">
+                    <img class="rounded-circle" style="width:54px; height:54px;" src="img/tiktok.jpg" alt="">
                 </a>
                 <a class="ms-4 me-3" href="https://www.instagram.com/brainology.id/">
-                    <img class="rounded-circle" style="width:54px; height:54px;" src="/img/whatsapp.png" alt="">
+                    <img class="rounded-circle" style="width:54px; height:54px;" src="img/whatsapp.png" alt="">
                 </a>
             </div>
             <!-- Media -->
@@ -143,32 +143,32 @@
                     <div class="d-flex w-100">
                         <div class="w-25">
                             <a href="index.html" class=" text-decoration-none">
-                                <img src="/img/home.png" style="width: 25px; height: 25px;" alt="">
+                                <img src="img/home.png" style="width: 25px; height: 25px;" alt="">
                                 <p class="fw-bold text-center" style="color: #ffffff; font-size: 13px;">Home</p>
                             </a>
                         </div>
                         <div class="w-25">
                             <a href="academy.html" class=" text-decoration-none">
-                                <img src="/img/buku.jpg" style="width: 25px; height: 25px;" alt="">
+                                <img src="img/buku.jpg" style="width: 25px; height: 25px;" alt="">
                                 <p class="fw-bold text-center" style="color: #ffffff; font-size: 13px;">Academy</p>
                             </a>
                         </div>
                         <div class="text-center align-items-center justify-content-center w-25 "
                             style=" margin-top: -70px; display: flex;">
                             <a href="index.html" class=" text-decoration-none">
-                                <img src="/img/b..png" class="rounded-circle"
+                                <img src="img/b..png" class="rounded-circle"
                                     style="background-color: #413f42; width: 50px; height: 50px;" alt="">
                             </a>
                         </div>
                         <div class="w-25">
                             <a href="login.html" class=" text-decoration-none">
-                                <img src="/img/cart.jpg" style="width: 25px; height: 25px;" alt="">
+                                <img src="img/cart.jpg" style="width: 25px; height: 25px;" alt="">
                                 <p class="fw-bold text-center" style="color: #ffffff; font-size: 13px;">Cart</p>
                             </a>
                         </div>
                         <div class="w-25">
                             <a href="login.html" class=" text-decoration-none">
-                                <img src="/img/profile.jpg" style="width: 25px; height: 25px;" alt="">
+                                <img src="img/profile.jpg" style="width: 25px; height: 25px;" alt="">
                                 <p class="fw-bold text-center" style="color: #ffffff; font-size: 13px;">Profile</p>
                             </a>
                         </div>
