--- a/academy.html
+++ b/academy.html
@@ -25,7 +25,7 @@
             <!-- Header -->
             <!-- Konten 1 -->
             <div class="card mt-3 mx-4" style="width: 24rem; background-color: #3e4659">
-                <img src="/img/tapa.webp" style="margin: 7px; width: 368px; height: 249.16px" class="card-img-top"
+                <img src="img/tapa.webp" style="margin: 7px; width: 368px; height: 249.16px" class="card-img-top"
                     alt="..." />
                 <div class="card-body">
                     <div class="d-flex align-content-sm-start justify-content-between">
@@ -54,7 +54,7 @@
             <!-- Konten 1 -->
             <!-- Konten 2 -->
             <div class="card mt-3 mx-4" style="width: 384px; background-color: #3e4659">
-                <img src="/img/speed reading.png" style="margin: 7px; width: 368px; height: 249.16px"
+                <img src="img/speed reading.png" style="margin: 7px; width: 368px; height: 249.16px"
                     class="card-img-top" alt="..." />
                 <div class="card-body">
                     <div class="d-flex justify-content-between">
@@ -87,7 +87,7 @@
             <!-- Konten 2 -->
             <!-- Konten 3 -->
             <div class="card mt-3 mx-4" style="width: 24rem; background-color: #3e4659">
-                <img src="/img/book3.jpeg" style="margin: 7px; width: 368px; height: 249.16px" class="card-img-top"
+                <img src="img/book3.jpeg" style="margin: 7px; width: 368px; height: 249.16px" class="card-img-top"
                     alt="..." />
                 <div class="card-body">
                     <div class="d-flex justify-content-between">
@@ -117,7 +117,7 @@
                     <div class="d-flex w-100">
                         <div class="w-25">
                             <a href="index.html" class="text-decoration-none">
-                                <img src="/img/home.png" style="width: 25px; height: 25px" alt="" />
+                                <img src="img/home.png" style="width: 25px; height: 25px" alt="" />
                                 <p class="fw-bold text-center" style="color: #ffffff; font-size: 13px">
                                     Home
                                 </p>
@@ -125,7 +125,7 @@
                         </div>
                         <div class="w-25">
                             <a href="academy.html" class="text-decoration-none">
-                                <img src="/img/buku.jpg" style="width: 25px; height: 25px" alt="" />
+                                <img src="img/buku.jpg" style="width: 25px; height: 25px" alt="" />
                                 <p class="fw-bold text-center" style="color: #ffffff; font-size: 13px">
                                     Academy
                                 </p>
@@ -134,13 +134,13 @@
                         <div class="text-center align-items-center justify-content-center w-25"
                             style="margin-top: -70px; display: flex">
                             <a href="index.html" class="text-decoration-none">
-                                <img src="/img/b..png" class="rounded-circle"
+                                <img src="img/b..png" class="rounded-circle"
                                     style="background-color: #413f42; width: 50px; height: 50px" alt="" />
                             </a>
                         </div>
                         <div class="w-25">
                             <a href="login.html" class="text-decoration-none">
-                                <img src="/img/cart.jpg" style="width: 25px; height: 25px" alt="" />
+                                <img src="img/cart.jpg" style="width: 25px; height: 25px" alt="" />
                                 <p class="fw-bold text-center" style="color: #ffffff; font-size: 13px">
                                     Cart
                                 </p>
@@ -148,7 +148,7 @@
                         </div>
                         <div class="w-25">
                             <a href="login.html" class="text-decoration-none">
-                                <img src="/img/profile.jpg" style="width: 25px; height: 25px" alt="" />
+                                <img src="img/profile.jpg" style="width: 25px; height: 25px" alt="" />
                                 <p class="fw-bold text-center" style="color: #ffffff; font-size: 13px">
                                     Profile
                                 </p>
