--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
                         <input type="text" class="form-control bg-transparent text-light" placeholder="811223344 (No HP)" aria-label="Username" aria-describedby="addon-wrapping">
                     </div>
                     <button type="button" class="btn btn-secondary btn-lg mb-1" style="width: 277px; background-color: #ecc94b; color: black;">Login</button>
-                    <button class="btn btn-primary text-center m-1" type="submit" style="width: 277px; height: 40px; background-color: #ffffff; color: black;"><img src="/img/mail.webp" style="width: 30px; height: 30px; padding-bottom: 2px;" alt="">Login with Email</button>
+                    <button class="btn btn-primary text-center m-1" type="submit" style="width: 277px; height: 40px; background-color: #ffffff; color: black;"><img src="img/mail.webp" style="width: 30px; height: 30px; padding-bottom: 2px;" alt="">Login with Email</button>
                 </div>
             </div>
             <!-- Isi -->
@@ -41,32 +41,32 @@
                     <div class="d-flex w-100">
                         <div class="w-25">
                             <a href="index.html" class=" text-decoration-none">
-                                <img src="/img/home.png" style="width: 25px; height: 25px;" alt="">
+                                <img src="img/home.png" style="width: 25px; height: 25px;" alt="">
                                 <p class="fw-bold text-center" style="color: #ffffff; font-size: 13px;">Home</p>
                             </a>
                         </div>
                         <div class="w-25">
                             <a href="academy.html" class=" text-decoration-none">
-                                <img src="/img/buku.jpg" style="width: 25px; height: 25px;" alt="">
+                                <img src="img/buku.jpg" style="width: 25px; height: 25px;" alt="">
                                 <p class="fw-bold text-center" style="color: #ffffff; font-size: 13px;">Academy</p>
                             </a>
                         </div>
                         <div class="text-center align-items-center justify-content-center w-25 "
                             style=" margin-top: -70px; display: flex;">
                             <a href="index.html" class=" text-decoration-none">
-                                <img src="/img/b..png" class="rounded-circle"
+                                <img src="img/b..png" class="rounded-circle"
                                     style="background-color: #413f42; width: 50px; height: 50px;" alt="">
                             </a>
                         </div>
                         <div class="w-25">
                             <a href="login.html" class=" text-decoration-none">
-                                <img src="/img/cart.jpg" style="width: 25px; height: 25px;" alt="">
+                                <img src="img/cart.jpg" style="width: 25px; height: 25px;" alt="">
                                 <p class="fw-bold text-center" style="color: #ffffff; font-size: 13px;">Cart</p>
                             </a>
                         </div>
                         <div class="w-25">
                             <a href="login.html" class=" text-decoration-none">
-                                <img src="/img/profile.jpg" style="width: 25px; height: 25px;" alt="">
+                                <img src="img/profile.jpg" style="width: 25px; height: 25px;" alt="">
                                 <p class="fw-bold text-center" style="color: #ffffff; font-size: 13px;">Profile</p>
                             </a>
                         </div>
